@@ -71,9 +71,39 @@ name|TokenFilter
 block|{
 DECL|field|stopWords
 specifier|private
+specifier|final
 name|Set
 name|stopWords
 decl_stmt|;
+DECL|field|ignoreCase
+specifier|private
+specifier|final
+name|boolean
+name|ignoreCase
+decl_stmt|;
+comment|/**      * Construct a token stream filtering the given input.      */
+DECL|method|StopFilter
+specifier|public
+name|StopFilter
+parameter_list|(
+name|TokenStream
+name|input
+parameter_list|,
+name|String
+index|[]
+name|stopWords
+parameter_list|)
+block|{
+name|this
+argument_list|(
+name|input
+argument_list|,
+name|stopWords
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
 comment|/**    * Constructs a filter which removes words from the input    * TokenStream that are named in the array of words.    */
 DECL|method|StopFilter
 specifier|public
@@ -85,6 +115,9 @@ parameter_list|,
 name|String
 index|[]
 name|stopWords
+parameter_list|,
+name|boolean
+name|ignoreCase
 parameter_list|)
 block|{
 name|super
@@ -94,11 +127,19 @@ argument_list|)
 expr_stmt|;
 name|this
 operator|.
+name|ignoreCase
+operator|=
+name|ignoreCase
+expr_stmt|;
+name|this
+operator|.
 name|stopWords
 operator|=
 name|makeStopSet
 argument_list|(
 name|stopWords
+argument_list|,
+name|ignoreCase
 argument_list|)
 expr_stmt|;
 block|}
@@ -114,21 +155,75 @@ name|Hashtable
 name|stopTable
 parameter_list|)
 block|{
-name|super
+name|this
 argument_list|(
 name|in
+argument_list|,
+name|stopTable
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
-name|stopWords
-operator|=
-operator|new
-name|HashSet
+block|}
+comment|/**    * Constructs a filter which removes words from the input    * TokenStream that are named in the Hashtable.    * If ignoreCase is true, all keys in the stopTable should already    * be lowercased.    * @deprecated Use {@link #StopFilter(TokenStream, Set)} instead    */
+DECL|method|StopFilter
+specifier|public
+name|StopFilter
+parameter_list|(
+name|TokenStream
+name|in
+parameter_list|,
+name|Hashtable
+name|stopTable
+parameter_list|,
+name|boolean
+name|ignoreCase
+parameter_list|)
+block|{
+name|this
 argument_list|(
+name|in
+argument_list|,
 name|stopTable
 operator|.
 name|keySet
 argument_list|()
+argument_list|,
+name|ignoreCase
 argument_list|)
+expr_stmt|;
+block|}
+comment|/**      * Construct a token stream filtering the given input.      * @param input      * @param stopWords The set of Stop Words, as Strings.  If ignoreCase is true, all strings should be lower cased      * @param ignoreCase -Ignore case when stopping.  The stopWords set must be setup to contain only lower case words       */
+DECL|method|StopFilter
+specifier|public
+name|StopFilter
+parameter_list|(
+name|TokenStream
+name|input
+parameter_list|,
+name|Set
+name|stopWords
+parameter_list|,
+name|boolean
+name|ignoreCase
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|input
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|ignoreCase
+operator|=
+name|ignoreCase
+expr_stmt|;
+name|this
+operator|.
+name|stopWords
+operator|=
+name|stopWords
 expr_stmt|;
 block|}
 comment|/**    * Constructs a filter which removes words from the input    * TokenStream that are named in the Set.    * It is crucial that an efficient Set implementation is used    * for maximum performance.    *    * @see #makeStopSet(java.lang.String[])    */
@@ -143,16 +238,14 @@ name|Set
 name|stopWords
 parameter_list|)
 block|{
-name|super
+name|this
 argument_list|(
 name|in
+argument_list|,
+name|stopWords
+argument_list|,
+literal|false
 argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|stopWords
-operator|=
-name|stopWords
 expr_stmt|;
 block|}
 comment|/**    * Builds a Hashtable from an array of stop words,    * appropriate for passing into the StopFilter constructor.    * This permits this table construction to be cached once when    * an Analyzer is constructed.    *    * @deprecated Use {@link #makeStopSet(String[])} instead.    */
@@ -166,6 +259,31 @@ parameter_list|(
 name|String
 index|[]
 name|stopWords
+parameter_list|)
+block|{
+return|return
+name|makeStopTable
+argument_list|(
+name|stopWords
+argument_list|,
+literal|false
+argument_list|)
+return|;
+block|}
+comment|/**     * Builds a Hashtable from an array of stop words,     * appropriate for passing into the StopFilter constructor.     * This permits this table construction to be cached once when     * an Analyzer is constructed.   * @deprecated Use {@link #makeStopSet(java.lang.String[], boolean)}  instead.  */
+DECL|method|makeStopTable
+specifier|public
+specifier|static
+specifier|final
+name|Hashtable
+name|makeStopTable
+parameter_list|(
+name|String
+index|[]
+name|stopWords
+parameter_list|,
+name|boolean
+name|ignoreCase
 parameter_list|)
 block|{
 name|Hashtable
@@ -195,26 +313,40 @@ condition|;
 name|i
 operator|++
 control|)
+block|{
+name|String
+name|stopWord
+init|=
+name|ignoreCase
+condition|?
+name|stopWords
+index|[
+name|i
+index|]
+operator|.
+name|toLowerCase
+argument_list|()
+else|:
+name|stopWords
+index|[
+name|i
+index|]
+decl_stmt|;
 name|stopTable
 operator|.
 name|put
 argument_list|(
-name|stopWords
-index|[
-name|i
-index|]
+name|stopWord
 argument_list|,
-name|stopWords
-index|[
-name|i
-index|]
+name|stopWord
 argument_list|)
 expr_stmt|;
+block|}
 return|return
 name|stopTable
 return|;
 block|}
-comment|/**    * Builds a Set from an array of stop words,    * appropriate for passing into the StopFilter constructor.    * This permits this stopWords construction to be cached once when    * an Analyzer is constructed.    */
+comment|/**    * Builds a Set from an array of stop words,    * appropriate for passing into the StopFilter constructor.    * This permits this stopWords construction to be cached once when    * an Analyzer is constructed.    *     * @see #makeStopSet(java.lang.String[], boolean) passing false to ignoreCase    */
 DECL|method|makeStopSet
 specifier|public
 specifier|static
@@ -225,6 +357,31 @@ parameter_list|(
 name|String
 index|[]
 name|stopWords
+parameter_list|)
+block|{
+return|return
+name|makeStopSet
+argument_list|(
+name|stopWords
+argument_list|,
+literal|false
+argument_list|)
+return|;
+block|}
+comment|/**    *      * @param stopWords    * @param ignoreCase If true, all words are lower cased first.      * @return a Set containing the words    */
+DECL|method|makeStopSet
+specifier|public
+specifier|static
+specifier|final
+name|Set
+name|makeStopSet
+parameter_list|(
+name|String
+index|[]
+name|stopWords
+parameter_list|,
+name|boolean
+name|ignoreCase
 parameter_list|)
 block|{
 name|HashSet
@@ -258,6 +415,16 @@ name|stopTable
 operator|.
 name|add
 argument_list|(
+name|ignoreCase
+condition|?
+name|stopWords
+index|[
+name|i
+index|]
+operator|.
+name|toLowerCase
+argument_list|()
+else|:
 name|stopWords
 index|[
 name|i
@@ -300,6 +467,23 @@ operator|.
 name|next
 argument_list|()
 control|)
+block|{
+name|String
+name|termText
+init|=
+name|ignoreCase
+condition|?
+name|token
+operator|.
+name|termText
+operator|.
+name|toLowerCase
+argument_list|()
+else|:
+name|token
+operator|.
+name|termText
+decl_stmt|;
 if|if
 condition|(
 operator|!
@@ -307,14 +491,13 @@ name|stopWords
 operator|.
 name|contains
 argument_list|(
-name|token
-operator|.
 name|termText
 argument_list|)
 condition|)
 return|return
 name|token
 return|;
+block|}
 comment|// reached EOS -- return null
 return|return
 literal|null
